--- a/config/gems.yml
+++ b/config/gems.yml
@@ -3,7 +3,7 @@
   :name: paperclip
 - :name: presentable
 - :name: geokit
-- :name: faster_csv
+- :name: fastercsv
 - :name: thinking-sphinx
 - :source: http://gemcutter.org
   :name: rails-footnotes
