--- a/config/gems.yml
+++ b/config/gems.yml
@@ -1,5 +1,7 @@
 --- 
 - :source: http://gemcutter.org
+  :name: clearance
+- :source: http://gemcutter.org
   :name: paperclip
 - :name: presentable
 - :name: geokit
